--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,11 @@
 			<version>8.0.27</version>
 		</dependency>
 
-
+		<dependency>
+            		<groupId>postgresql</groupId>
+            		<artifactId>postgresql</artifactId>
+            		<version>9.1-901-1.jdbc4</version>
+        	</dependency
 
 
 		<!-- API, java.xml.bind module -->
