--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
             		<groupId>postgresql</groupId>
             		<artifactId>postgresql</artifactId>
             		<version>9.1-901-1.jdbc4</version>
-        	</dependency
+		</dependency>
 
 
 		<!-- API, java.xml.bind module -->
